tests/ui/bad_value2.stderr
error: expected a string, but found `42`
 --> $DIR/bad_value2.rs:6:14
  |
6 |     string = 42
  |              ^^
