tests/ui/bad_value2.rs
// Copyright 2020 Oxide Computer Company

use testlib::annotation;

#[annotation {
    string = 42
}]
fn test() {}

fn main() {}
